Make sure images and videos are hidden from the collapsed body. Set a minimum width for the headline when it's not empty. Add left margin to the comments summary.

--- a/scss/partials/_stream_collapsed_item.scss
+++ b/scss/partials/_stream_collapsed_item.scss
@@ -116,7 +116,10 @@ div.stream-collapsed-item {
       white-space: nowrap;
       @include activity-title(14px, 24px);
       margin-left: 8px;
-      min-width: 0;
+      
+      &:not(:empty) {
+        min-width: 10%;
+      }
     }
 
     div.stream-item-body {
@@ -142,6 +145,10 @@ div.stream-collapsed-item {
         display: inline !important;
       }
 
+      img, iframe, video {
+        display: none;
+      }
+
       &:before {
         content: "-";
         width: 4px;
@@ -158,6 +165,7 @@ div.stream-collapsed-item {
 
     div.is-comments {
       height: 24px;
+      margin-left: 8px;
       flex: 0 0 auto;
     }
 
